# curve

./: LICENSE  curve.cabal
Data/: Curve.hs
Data/Curve/: Bezier.hs  Classes.hs  Const.hs  Conversions.hs  D2.hs  Draw.hs  Function.hs  Interval.hs  Linear.hs  Math.hs  Periodic.hs  Piecewise.hs  Poly.hs  Rect.hs  SBasis.hs  Util.hs
Test/: test.sh
tests/: Main.hs  Tests.hs  test.sh
tests/Test/QuickCheck/: PolyQC.hs  UnsafeShowIO.hs
